package com.mikeescom.adapterpattern;

public interface LightningPhone {
    void recharge();
    void useLightning();
}
