package com.mikeescom.adapterpattern;

public interface MicroUsbPhone {
    void recharge();
    void useMicroUsb();
}
